Minor fix to alignment of Zendesk logo for phones

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 $media-size-phone: "(max-width: 684px)";
-$media-size-phone-sml: "(max-width: 375px)";
+$media-size-phone-sml: "(max-width: 390px)";
 $media-size-phone-med: "(max-width: 414px)";
 $media-size-tablet: "(max-width: 768px)";
 
